# spark_cuda_demo

./: Introduction.md  README.md  build.sbt  build.sh  copy_build.sh  javah_build.sh
src/main/c/: CMakeLists.txt  Interface.cpp
src/main/c/_include/: Sample.h
src/main/c/src/: CMakeLists.txt
src/main/c/src/_cpp/: add_cuda.cu
src/main/c/src/_include/: add_cuda.h  add_two.h
src/main/scala/: Sample.scala  SimpleApp.scala
